feat: 添加修改知乎样式的功能，包括按钮和相关逻辑，支持中英文本地化。

--- a/packages/i18n/locales/en/messages.json
+++ b/packages/i18n/locales/en/messages.json
@@ -13,6 +13,9 @@
   "injectButton": {
     "message": "Click to inject Content Scripts"
   },
+  "modifyZhihuStyle": {
+    "message": "修改知乎样式"
+  },
   "greeting": {
     "description": "Greeting message",
     "message": "Hello, My name is $NAME$",
