--- a/知乎样式修改功能说明.md
+++ b/知乎样式修改功能说明.md
@@ -27,12 +27,24 @@
 - 添加 `data-modified` 属性防止重复修改
 - 支持多个标题同时修改
 
+### 5. CSS变量修改
+- 修改CSS变量 `--GBL01A` 的颜色为黑色 (#000000)
+- 使用 `!important` 确保样式优先级
+- 同时应用到 `:root` 和所有元素 (`*`)
+- 创建独立的style元素进行CSS变量覆盖
+
+### 6. 侧边栏内容移除
+- 查找所有具有 `Question-sideColumn` 和 `QuestionHeader-side` 类名的元素
+- 清空这些元素的所有内容 (`innerHTML = ''`)
+- 添加 `data-content-removed` 属性防止重复处理
+- 支持多个侧边栏元素同时处理
+
 ## 使用方法
 
 1. 打开知乎网站 (https://www.zhihu.com 或 https://zhihu.com)
 2. 点击Chrome扩展图标打开弹框
 3. 点击"修改知乎样式"按钮
-4. 知乎logo会立即替换为飞书logo，显示"飞书云文档"文字，所有问题标题变为"xxx项目文档"
+4. 知乎logo会立即替换为飞书logo，显示"飞书云文档"文字，所有问题标题变为"xxx项目文档"，CSS变量 `--GBL01A` 变为黑色，侧边栏内容被清空
 5. 再次点击按钮可以恢复原样式（通过刷新页面）
 
 ## 技术实现
@@ -43,6 +55,8 @@
 - 使用outerHTML替换整个logo元素
 - 动态添加文字元素到logo旁边
 - 批量修改所有匹配的标题元素
+- 修改CSS变量 `--GBL01A` 为黑色
+- 清空侧边栏元素的内容
 - 检查是否已修改，支持切换功能
 
 ### 配置更新
@@ -58,3 +72,4 @@
 - 不需要在知乎页面上显示任何额外的按钮或界面
 - 使用页面刷新来恢复原样式，确保完全重置
 - 标题修改会应用到页面上所有具有 `QuestionHeader-title` 类名的元素
+- 侧边栏内容移除会应用到所有具有 `Question-sideColumn` 和 `QuestionHeader-side` 类名的元素
