--- a/知乎样式修改功能说明.md
+++ b/知乎样式修改功能说明.md
@@ -27,11 +27,13 @@
 - 添加 `data-modified` 属性防止重复修改
 - 支持多个标题同时修改
 
-### 5. CSS变量修改
+### 5. CSS变量修改和布局调整
 - 修改CSS变量 `--GBL01A` 的颜色为黑色 (#000000)
+- 设置 `.Question-mainColumn` 元素的宽度为100%
+- 隐藏 `.AnswerItem` 元素下的所有视频和图片
 - 使用 `!important` 确保样式优先级
 - 同时应用到 `:root` 和所有元素 (`*`)
-- 创建独立的style元素进行CSS变量覆盖
+- 创建独立的style元素进行CSS变量覆盖和布局调整
 
 ### 6. 侧边栏内容移除
 - 查找所有具有 `Question-sideColumn` 和 `QuestionHeader-side` 类名的元素
@@ -39,12 +41,19 @@
 - 添加 `data-content-removed` 属性防止重复处理
 - 支持多个侧边栏元素同时处理
 
+### 7. 轮询隐藏媒体内容
+- 启动定时器，每秒检查新加载的 `.AnswerItem` 元素
+- 自动隐藏新出现的视频和图片元素
+- 使用 `data-zhihu-hidden` 属性防止重复处理
+- 在恢复原样式时自动清除定时器
+- 确保动态加载的内容也能被隐藏
+
 ## 使用方法
 
 1. 打开知乎网站 (https://www.zhihu.com 或 https://zhihu.com)
 2. 点击Chrome扩展图标打开弹框
 3. 点击"修改知乎样式"按钮
-4. 知乎logo会立即替换为飞书logo，显示"飞书云文档"文字，所有问题标题变为"xxx项目文档"，CSS变量 `--GBL01A` 变为黑色，侧边栏内容被清空
+4. 知乎logo会立即替换为飞书logo，显示"飞书云文档"文字，所有问题标题变为"xxx项目文档"，CSS变量 `--GBL01A` 变为黑色，主列区域宽度变为100%，回答中的视频和图片被隐藏，侧边栏内容被清空，同时启动轮询功能自动隐藏新加载的媒体内容
 5. 再次点击按钮可以恢复原样式（通过刷新页面）
 
 ## 技术实现
@@ -56,7 +65,10 @@
 - 动态添加文字元素到logo旁边
 - 批量修改所有匹配的标题元素
 - 修改CSS变量 `--GBL01A` 为黑色
+- 设置主列区域宽度为100%
+- 隐藏回答中的视频和图片
 - 清空侧边栏元素的内容
+- 启动轮询定时器自动隐藏新加载的媒体内容
 - 检查是否已修改，支持切换功能
 
 ### 配置更新
@@ -72,4 +84,7 @@
 - 不需要在知乎页面上显示任何额外的按钮或界面
 - 使用页面刷新来恢复原样式，确保完全重置
 - 标题修改会应用到页面上所有具有 `QuestionHeader-title` 类名的元素
+- 主列区域宽度调整会应用到所有具有 `Question-mainColumn` 类名的元素
+- 视频和图片隐藏会应用到所有 `.AnswerItem` 元素下的 `video` 和 `img` 标签
+- 轮询功能会持续监控新加载的内容并自动隐藏媒体元素
 - 侧边栏内容移除会应用到所有具有 `Question-sideColumn` 和 `QuestionHeader-side` 类名的元素
